--- a/themes/elliottt/layouts/partials/footer.html
+++ b/themes/elliottt/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <div class="footer">
-  Copyright © {{ now | time.Format "2006" }} {{ .Site.Author.name }}
+  Copyright © {{ now | time.Format "2006" }} {{ .Site.Params.author }}
 </div>
 <script>feather.replace({ width: "1em", height: "0.75em" });</script>
